# Openstrat

./: analyzer.py  app.py  data_processor.py  database.py  hiring_intelligence.db  index.html  notifier.py  pyproject.toml  resume_analyzer.py  scraper.py  talent_analyzer.py  utils.py  visualizer.py
