[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "beautifulsoup4>=4.13.3",
    "numpy>=2.2.4",
    "openai>=1.69.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "requests>=2.32.3",
    "streamlit>=1.44.0",
    "trafilatura>=2.0.0",
]
